--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "main": "miss-bug-backend.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon --ignore \"./data\" server.js"
+    "dev": "set SECRET1=Dolev-Secret-1-2-3 & nodemon --ignore \"./data\" server.js"
   },
   "author": "me",
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "cryptr": "^6.3.0",
     "express": "^4.19.2",
     "nodemon": "^3.1.4"
   }
